@@ -1,6 +1,7 @@
 3.5.4
   * Update icon (bug 649359)
   * Fix appearance of tweaks to no longer have a white background
+  * Remove welcome image and start with a tweakgroup selected by default
 
 3.5.0
   * Work with new gnome shell dbus interface
